--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "ngx-webstorage-service": "^4.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
