--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,6 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/aos/dist/aos.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "third-party/now-ui-kit-1.1.0/css/now-ui-kit.min.css",
               "src/styles.css"
@@ -37,8 +36,7 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "third-party/now-ui-kit-1.1.0/js/now-ui-kit.js",
-              "node_modules/aos/dist/aos.js"
+              "third-party/now-ui-kit-1.1.0/js/now-ui-kit.js"
             ]
           },
           "configurations": {
