--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manoela-cbsilva",
+  "name": "mcamilasilva",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -14,7 +14,7 @@
     "@angular/animations": "~11.0.3",
     "@angular/common": "~11.0.3",
     "@angular/compiler": "~11.0.3",
-    "@angular/core": "~11.0.3",
+    "@angular/core": "^11.0.9",
     "@angular/forms": "~11.0.3",
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
